# UAVs_rotorsExercise

rotors_exercise/: CMakeLists.txt  controller (copy).yaml  controller.yaml
rotors_exercise/cfg/: Controller.cfg
rotors_exercise/cfg/cpp/rotors_exercise/: ControllerConfig.h
rotors_exercise/docs/: ControllerConfig-usage.dox  ControllerConfig.dox  ControllerConfig.wikidoc
rotors_exercise/launch/: mav_homework3.launch  mav_homework3_mission.launch  mav_homework3_simulation.launch  mav_homework3_solution.launch  mav_homework3_visualize.launch  mav_homework4.launch  mav_homework4_solution.launch  mav_with_fake_gps_hovering.launch  paths.launch
rotors_exercise/resource/: exercise3own.txt
rotors_exercise/rviz/: rotors_exercise.rviz
rotors_exercise/src/: control.cpp  estimator.cpp  estimator.h  getPath.cpp  getPath.h  waypoint_publisher_file_fixed.cpp  waypoint_publisher_fixed.cpp
rotors_exercise/src/rotors_exercise/cfg/: ControllerConfig.py
rotors_exercise/urdf/: firefly_fake_gps_sensor.gazebo
